--- a/trunk/TODO
+++ b/trunk/TODO
@@ -73,6 +73,8 @@
    - [X] check HPC support!
 
 ** Bugs
+    - some functions in -skeleton-function are not highlighted and
+      completable
     - M-n/p does not work from node-/element-blocks (aternative to C-c
       {/}).
     - C-c { before a number-block does not work
